--- a/Desktop/Todo Platzi/git-github/css/styles.css
+++ b/Desktop/Todo Platzi/git-github/css/styles.css
@@ -1,7 +1,20 @@
 body{
+    color: #333;
     align-items: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size:16px;
+    margin: 0;
+    padding: 0;
 }
 
-#parrrafo{
-    background-color: deeppink;
+.container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
+
+.container h1{
+    font-size: 20px;
 }
